Issue #2998748 by MaddieC, lauriii, markconroy, kjay: Horizontal Scrolling when screensize hits 960px
(cherry picked from commit bf9da01f9a98b0d7f564aaa86f1dd95f3e12ed55)

--- a/core/profiles/demo_umami/themes/umami/css/layout/layout-2-col.css
+++ b/core/profiles/demo_umami/themes/umami/css/layout/layout-2-col.css
@@ -13,7 +13,7 @@
   }
 
   .two-columns .main .layout-content {
-    flex: 0 0 75%;
+    flex: 1 1 75%;
   }
 
   .layout-sidebar {
